# IG2

./: .gitignore  README.md
IG2-Practica/: CMakeLists.txt  IG2-Practica.sln  IG2-Practica.vcxproj  IG2-Practica.vcxproj.filters
IG2-Practica/IG2-Practica/: Constants.h  Hero.cpp  Hero.h  IG2App.cpp  Labyrinth.cpp  Labyrinth.h  Wall.h
IG2-Practica/include/: IG2App.h  IG2Object.h  Labyrinth.h  Wall.h
IG2-Practica/src/: IG2App.cpp  IG2Object.cpp  Labyrinth.cpp  Wall.cpp
ProyectosOGREvc15x86/IG2App/: AnimCharacter.cpp  AnimCharacter.h  Bomb.cpp  Bomb.h  BombPool.cpp  BombPool.h  Character.cpp  Character.h  Constants.h  ExplosionSmoke.cpp  ExplosionSmoke.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  IG2App.cpp  IG2App.h  IG2App.vcxproj  IG2App.vcxproj.filters  IG2Main.cpp  IntroScene.cpp  IntroScene.h  Labyrinth.cpp  Labyrinth.h  MegaVillain.cpp  MegaVillain.h  Scene.cpp  Scene.h  SceneSystem.cpp  SceneSystem.h  SmokePool.cpp  SmokePool.h  Villain.cpp  Villain.h  Wall.cpp  Wall.h
ProyectosOGREvc15x86/Labyrinths/: stage1.txt  stage2.txt
ProyectosOGREvc15x86/Labyrinths/__MACOSX/: ._stage1.txt  ._stage2.txt
ProyectosOGREvc15x86/media/materials/scripts/: Bomb.material  BombFuse.material  IntroSceneFloor.material  LabyrinthFloor.material  LabyrinthWall.material  Rust.material  Wave.material  skyMaterial.material
ProyectosOGREvc15x86/media/materials/shaders/: sphereFS.glsl  sphereVS.glsl  waveShaderFS.glsl  waveShaderVS.glsl
ProyectosOGREvc15x86/media/particle/: whiteSmoke.particle
